--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -190,18 +190,85 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808080749505_InitialModel.cs" />
+    <Compile Include="Migrations\201808080749505_InitialModel.Designer.cs">
+      <DependentUpon>201808080749505_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808080758083_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201808080758083_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201808080758083_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808080801554_AddMembershipType.cs" />
+    <Compile Include="Migrations\201808080801554_AddMembershipType.Designer.cs">
+      <DependentUpon>201808080801554_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808080803184_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201808080803184_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201808080803184_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808080810047_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201808080810047_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201808080810047_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808080829225_AddMembershiptypeName.cs" />
+    <Compile Include="Migrations\201808080829225_AddMembershiptypeName.Designer.cs">
+      <DependentUpon>201808080829225_AddMembershiptypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808080839077_UpdateMembershipName.cs" />
+    <Compile Include="Migrations\201808080839077_UpdateMembershipName.Designer.cs">
+      <DependentUpon>201808080839077_UpdateMembershipName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808080853240_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201808080853240_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201808080853240_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808080855167_AddBirthdateToCustomerNullable.cs" />
+    <Compile Include="Migrations\201808080855167_AddBirthdateToCustomerNullable.Designer.cs">
+      <DependentUpon>201808080855167_AddBirthdateToCustomerNullable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808081054161_AddMovie.cs" />
+    <Compile Include="Migrations\201808081054161_AddMovie.Designer.cs">
+      <DependentUpon>201808081054161_AddMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808081057217_UpdateMovie.cs" />
+    <Compile Include="Migrations\201808081057217_UpdateMovie.Designer.cs">
+      <DependentUpon>201808081057217_UpdateMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808090649398_AddGenres.cs" />
+    <Compile Include="Migrations\201808090649398_AddGenres.Designer.cs">
+      <DependentUpon>201808090649398_AddGenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808091254168_update-dontknow.cs" />
+    <Compile Include="Migrations\201808091254168_update-dontknow.Designer.cs">
+      <DependentUpon>201808091254168_update-dontknow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808091330000_update-db-stuff.cs" />
+    <Compile Include="Migrations\201808091330000_update-db-stuff.Designer.cs">
+      <DependentUpon>201808091330000_update-db-stuff.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -258,6 +325,13 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -274,6 +348,50 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201808080749505_InitialModel.resx">
+      <DependentUpon>201808080749505_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808080758083_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201808080758083_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808080801554_AddMembershipType.resx">
+      <DependentUpon>201808080801554_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808080803184_PopulateMembershipTypes.resx">
+      <DependentUpon>201808080803184_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808080810047_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201808080810047_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808080829225_AddMembershiptypeName.resx">
+      <DependentUpon>201808080829225_AddMembershiptypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808080839077_UpdateMembershipName.resx">
+      <DependentUpon>201808080839077_UpdateMembershipName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808080853240_AddBirthdateToCustomer.resx">
+      <DependentUpon>201808080853240_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808080855167_AddBirthdateToCustomerNullable.resx">
+      <DependentUpon>201808080855167_AddBirthdateToCustomerNullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808081054161_AddMovie.resx">
+      <DependentUpon>201808081054161_AddMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808081057217_UpdateMovie.resx">
+      <DependentUpon>201808081057217_UpdateMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808090649398_AddGenres.resx">
+      <DependentUpon>201808090649398_AddGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808091254168_update-dontknow.resx">
+      <DependentUpon>201808091254168_update-dontknow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808091330000_update-db-stuff.resx">
+      <DependentUpon>201808091330000_update-db-stuff.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
